java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/WithPackageStatement.java
<error descr="Package statement is not allowed for implicitly declared class">package pack.bar;</error>

void foo() {

}